<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/white"
	android:orientation="vertical">
	
	<View
		android:id="@+id/topView"
		android:layout_width="match_parent"
		android:layout_height="160dp"
		android:background="@android:color/white"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<LinearLayout
		android:id="@+id/navBar"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@drawable/gradiant"
		android:gravity="center_vertical"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@+id/topView">
		
		<ImageView
			android:id="@+id/proxy_apps_back_pressed"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:layout_marginLeft="20sp"
			android:layout_marginRight="20sp"
			android:src="@drawable/ic_arrow_back"
			app:tint="@android:color/white"
			android:contentDescription="@string/app_name" />
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/all_apps"
			android:textStyle="bold"
			android:textColor="@android:color/white"
			android:textSize="20sp" />
	
	</LinearLayout>
	
	<TextView
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="15dp"
		android:layout_marginTop="20dp"
		android:text="@string/all_apps_des"
		android:textColor="@android:color/black"
		android:fontFamily="@font/middle_bold"
		android:textStyle="bold"
		android:textSize="12sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/navBar" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/topView">

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/proxy_recyclerView"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_marginBottom="40dp"
				android:layout_weight="1"
				android:drawSelectorOnTop="false"
				android:scrollbarStyle="outsideOverlay"
				android:scrollbars="vertical"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/topView" />

		</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



